--- a/testes/styleindex.css
+++ b/testes/styleindex.css
@@ -12,7 +12,7 @@
    ESTILO GERAL
 ========================================== */
 body {
-    background-color: #374779;
+    background-color: #374779;/*cor do backgroun*/
     color: #0b1d51;
     margin: 0;
     padding: 20px 0;
